# birb-brains-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  requirements.txt
config/: logging.toml
data/: userskills.txt
fftbg/: ability.py  arena.py  base_stats.py  betting.py  betting_model.py  bot_brains.py  bot_memory.py  combatant.py  config.py  data.py  download.py  equipment.py  (+25 more)
simulator/: Cargo.toml  feed_data.py  test_simulator.py
simulator/src/: data.rs  lib.rs  main.rs  runner.rs
simulator/src/dto/: match_up.rs  mod.rs  output.rs  patch.rs  python.rs  rust.rs
simulator/src/sim/: arena.rs  combatant.rs  condition.rs  condition_block.rs  element.rs  facing.rs  gender.rs  location.rs  log.rs  mod.rs  panel.rs  pathfinder.rs  phase.rs  sign.rs  simulation.rs  skill_block.rs  target_value.rs  weapon.rs
simulator/src/sim/actions/: attack.rs  basic_skill.rs  battle_skill.rs  black_magic.rs  charge.rs  common.rs  draw_out.rs  elemental.rs  item.rs  jump.rs  math_skill.rs  mod.rs  perform.rs  punch_art.rs  steal.rs  summon_magic.rs  talk_skill.rs  throw.rs  time_magic.rs  white_magic.rs  yin_yang_magic.rs
simulator/src/sim/actions/monster/: bomb.rs  byblos.rs  chocobo.rs  coeurl.rs  dragon.rs  goblin.rs  juravis.rs  mod.rs  molboro.rs  pisco.rs  porky.rs  reaper.rs  sekhret.rs  serpentarius.rs  tiamat.rs  trent.rs  ultima_demon.rs  work.rs
simulator/src/sim/constants/: mod.rs  slope.rs  surface.rs
simulator/src/sim/enums/: condition.rs  element.rs  gender.rs  mod.rs  sign.rs  team.rs  weapon.rs
simulator/src/sim/log/: entry.rs  mod.rs
(+205 files in other folders)
