[package]
name = "simulator"
version = "0.1.0"
authors = ["Emily A. Bellows <emily.a.bellows@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2"