[package]
name = "simulator"
version = "0.1.0"
authors = ["Emily A. Bellows <emily.a.bellows@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rmp-serde = "0.14.3"
indicatif = "0.14.0"
lazy_static = "1.4.0"
rand = {version = "0.7.3", features = ["small_rng"]}
colored = "1.9"
