[package]
name = "simulator"
version = "0.1.0"
authors = ["Emily A. Bellows <emily.a.bellows@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
bincode = "1.2.1"
indicatif = "0.14.0"
lazy_static = "1.4.0"
rand = {version = "0.7.3", features = ["small_rng"]}
colored = "1.9"
clap = {version = "3.0.0-beta.1", git = "https://github.com/clap-rs/clap/" }